--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -163,7 +163,7 @@
             android:text="@string/new_here" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvRegistrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
