--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,8 @@
             android:id="@+id/password_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/contraseña" />
+            android:hint="@string/contraseña"
+            android:inputType="textPassword"/>
 
     </android.support.design.widget.TextInputLayout>
 
