--- a/app/src/main/res/layout/fragment_register_soda.xml
+++ b/app/src/main/res/layout/fragment_register_soda.xml
@@ -167,7 +167,7 @@
         app:layout_constraintTop_toBottomOf="@id/campo_email">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/contraseña_edittext"
+            android:id="@+id/contrasena_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/contraseña"
@@ -190,7 +190,7 @@
         app:layout_constraintTop_toBottomOf="@id/campo_contraseña">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/confirmar_contraseña_edittext"
+            android:id="@+id/confirmar_contrasena_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirmar_contra"
@@ -198,10 +198,10 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/register_button"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
