--- a/app/src/main/res/layout/activity_home_customer.xml
+++ b/app/src/main/res/layout/activity_home_customer.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation_soda" />
+        app:menu="@menu/navigation_customer" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/fragment_container"
