--- a/app/src/main/res/menu/navigation_customer.xml
+++ b/app/src/main/res/menu/navigation_customer.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/nav_products"
+        android:icon="@drawable/baseline_restaurant_black_24"
+        android:title="@string/sodas" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/nav_orders"
+        android:icon="@drawable/baseline_receipt_black_24"
+        android:title="@string/pedidos" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/nav_profile_soda"
+        android:icon="@drawable/baseline_person_black_24"
+        android:title="@string/profile" />
 
 </menu>
