--- a/app/src/main/res/layout/template_ingrediente.xml
+++ b/app/src/main/res/layout/template_ingrediente.xml
@@ -31,6 +31,16 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:text="Descripción"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="18sp" />
+
+        <TextView
             android:id="@+id/precio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +52,7 @@
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/number_picker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"
             numberpicker:min="0"
@@ -50,5 +60,6 @@
             numberpicker:value="0"
             numberpicker:focusable="false"
             numberpicker:custom_layout="@layout/number_picker_custom_layout" />
+        <!--TODO: Recordar cambiar la altura del numberpicker para cuando se muestre a clientes-->
     </LinearLayout>
 </android.support.v7.widget.CardView>
