--- a/app/src/main/res/layout/template_ingrediente.xml
+++ b/app/src/main/res/layout/template_ingrediente.xml
@@ -7,10 +7,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:background="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
         <ImageView
@@ -26,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:text="Nombre"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
