--- a/app/src/main/res/layout/template_plato_del_dia.xml
+++ b/app/src/main/res/layout/template_plato_del_dia.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="?android:attr/selectableItemBackground"
         android:padding="16dp">
 
         <ImageView
@@ -55,7 +56,7 @@
         <com.travijuu.numberpicker.library.NumberPicker
             android:id="@+id/number_picker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_alignLeft="@+id/precio"
             android:layout_below="@+id/precio"
             android:layout_marginTop="8dp"
@@ -65,5 +66,6 @@
             numberpicker:value="0"
             numberpicker:focusable="false"
             numberpicker:custom_layout="@layout/number_picker_custom_layout" />
+        <!--TODO: Recordar cambiar la altura del numberpicker para cuando se muestre a clientes-->
     </RelativeLayout>
 </android.support.v7.widget.CardView>
