--- a/app/src/main/res/layout/alert_dialog_edit_delete.xml
+++ b/app/src/main/res/layout/alert_dialog_edit_delete.xml
@@ -26,5 +26,5 @@
         android:background="?android:attr/selectableItemBackground"
         android:drawableStart="@drawable/baseline_delete_black_24"
         android:drawableLeft="@drawable/baseline_delete_black_24"
-        android:text="@string/edit" />
+        android:text="@string/delete" />
 </LinearLayout>
