--- a/app/src/main/res/layout/template_plato_del_dia.xml
+++ b/app/src/main/res/layout/template_plato_del_dia.xml
@@ -43,7 +43,7 @@
             android:text="Casado con papitas extra"/>
 
         <TextView
-            android:id="@+id/precio"
+            android:id="@+id/telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/descripcion"
@@ -57,8 +57,8 @@
             android:id="@+id/number_picker"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_alignLeft="@+id/precio"
-            android:layout_below="@+id/precio"
+            android:layout_alignLeft="@+id/telefono"
+            android:layout_below="@+id/telefono"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"
             numberpicker:min="0"
