--- a/app/src/main/res/layout/template_soda.xml
+++ b/app/src/main/res/layout/template_soda.xml
@@ -11,7 +11,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/plato"
+            android:id="@+id/nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Nombre_soda"
@@ -19,12 +19,12 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/nombre"
+            android:id="@+id/direccion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/plato"
-            android:layout_alignStart="@+id/plato"
-            android:layout_alignLeft="@+id/plato"
+            android:layout_below="@+id/nombre"
+            android:layout_alignStart="@+id/nombre"
+            android:layout_alignLeft="@+id/nombre"
             android:layout_marginStart="-1dp"
             android:layout_marginLeft="-1dp"
             android:layout_marginTop="5dp"
@@ -32,12 +32,12 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/precio"
+            android:id="@+id/telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nombre"
-            android:layout_alignStart="@+id/nombre"
-            android:layout_alignLeft="@+id/nombre"
+            android:layout_below="@+id/direccion"
+            android:layout_alignStart="@+id/direccion"
+            android:layout_alignLeft="@+id/direccion"
             android:layout_marginStart="1dp"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="2dp"
