--- a/app/src/main/res/layout/fragment_register_soda.xml
+++ b/app/src/main/res/layout/fragment_register_soda.xml
@@ -40,7 +40,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <ImageView
-        android:id="@+id/telefono"
+        android:id="@+id/precio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
