--- a/app/src/main/res/layout/fragment_soda_products.xml
+++ b/app/src/main/res/layout/fragment_soda_products.xml
@@ -14,7 +14,7 @@
         <in.srain.cube.views.GridViewWithHeaderAndFooter xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
