Se añadió el logout en el menú y se eliminó del onbackpressed

--- a/app/src/main/res/menu/menu_acerca_de.xml
+++ b/app/src/main/res/menu/menu_acerca_de.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/verVideo"
         android:title="@string/verVideo" />
+    <item
+        android:id="@+id/item_cerrar_sesion"
+        android:title="@string/cerrarSesion" />
 </menu>
