--- a/app/src/main/res/drawable/googlepay_button_overlay.xml
+++ b/app/src/main/res/drawable/googlepay_button_overlay.xml
@@ -15,14 +15,13 @@
      limitations under the License.
 -->
 
-<resources>
-
-    <dimen name="padding_small">5dp</dimen>
-    <dimen name="margin_large">10dp</dimen>
-    <dimen name="margin_xlarge">30dp</dimen>
-
-    <dimen name="buy_button_width">300dp</dimen>
-    <dimen name="buy_button_height">48sp</dimen>
-    <dimen name="buy_button_min_width">200dp</dimen>
-
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_enabled="false">
+        <shape
+            android:shape="rectangle" >
+            <corners android:radius="4dp"/>
+            <solid android:color="#7FFFFFFF"/>
+        </shape>
+    </item>
+    <item android:drawable="@android:color/transparent" />
+</selector>
